[package]
name = "simx"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

[dependencies]
getrandom = "0.2.10"
serde = { version = "1.0.164", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.4", features = ["serde", "v4"] }

[dev-dependencies]
anyhow = "1.0.71"
fs-err = "2.9.0"
serde_json = "1.0.97"
